--- a/estilo.css
+++ b/estilo.css
@@ -61,7 +61,7 @@ input[type='number'] {
 
 input[type='text']:focus,
 input[type='number']:focus {
-  border-color: #6a11cb;
+  border-color: hsl(130, 85%, 43%);
   box-shadow: 0 0 8px rgba(106, 17, 203, 0.3);
   outline: none;
 }
